feat(h7): routing filter ([...slug]) + @sidebar + intercepted modal @modal/(.)notes/[id] + Header TagsMenu + mentor CSS (notes, modal, list, preview, details, search, pagination) + API updates

--- a/components/Pagination/Pagination.module.css
+++ b/components/Pagination/Pagination.module.css
@@ -5,7 +5,6 @@
   margin: 16px 0;
   list-style: none;
   padding: 0;
-  margin: 0;
 }
 
 .pagination li {
@@ -46,4 +45,9 @@
 .active a {
   color: #fff !important;
   font-weight: 500;
+}
+
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
 }
